@@ -1,0 +1,23 @@
+<?xml version="1.0" ?>
+
+<bakefile-gen xmlns="http://www.bakefile.org/schema/bakefile-gen">
+
+    <input>
+        xmlwrapp.bkl
+    </input>
+
+    <add-formats>
+        msvc6prj,msvs2003prj,msvs2005prj,msvs2008prj
+    </add-formats>
+
+    <add-flags formats="msvs2003prj">
+        -o $(INPUT_FILE_DIR)/$(INPUT_FILE_BASENAME_NOEXT)_vc7.sln
+    </add-flags>
+    <add-flags formats="msvs2005prj">
+        -o $(INPUT_FILE_DIR)/$(INPUT_FILE_BASENAME_NOEXT)_vc8.sln
+    </add-flags>
+    <add-flags formats="msvs2008prj">
+        -o $(INPUT_FILE_DIR)/$(INPUT_FILE_BASENAME_NOEXT)_vc9.sln
+    </add-flags>
+
+</bakefile-gen>
