@@ -1,0 +1,3 @@
+
+Please use Bakefile (http://www.bakefile.org) to generate Visual C++ project
+files.
